--- a/.github/workflows/myapp.yml
+++ b/.github/workflows/myapp.yml
@@ -23,9 +23,10 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: starting node.js
-      run: actions/setup-node@v2-beta
+      uses: actions/setup-node@v2-beta
       with:
         version: 12
+    
     - name: GitHub Action for Yarn
       uses: Borales/actions-yarn@v2.3.0
       with:
@@ -36,7 +37,7 @@ jobs:
       run: yarn build
       
     - name: intalling surge
-       run: npm install --global surge
+      run: npm install --global surge
         
     - name: Deploying surge
       run: surge ./build reactapp2tariq2.surge.sh --token ${{secrets.SURGE_TOKEN}}
