--- a/.github/workflows/myapp.yml
+++ b/.github/workflows/myapp.yml
@@ -28,7 +28,7 @@ jobs:
         version: 12
     
     - name: GitHub Action for Yarn
-      uses: Borales/actions-yarn@v2.3.0
+      uses: Borales/actions-yarn@v2.1.0
       with:
         # Yarn command
         cmd: install
@@ -40,4 +40,4 @@ jobs:
       run: npm install --global surge
         
     - name: Deploying surge
-      run: surge ./build reactapp2tariq2.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build https://reactapp2tariq2.surge.sh --token ${{secrets.SURGE_TOKEN}}
